server/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

unsafe extern "C" {
    #[doc = " @brief Must be called when a new team is created\n @param team_uuid The id of the team that was created\n @param team_name The name of the team that was created\n @param user_uuid The id of the user who created the new team\n\n Commands:\n /create \"team_name\" \"team_description\""]
    pub fn server_event_team_created(
        team_uuid: *const ::std::os::raw::c_char,
        team_name: *const ::std::os::raw::c_char,
        user_uuid: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a new channel is created\n @param team_uuid The id of the team this channel is in\n @param channel_uuid The id of the created channel\n @param channel_name The name of the new channel\n\n Commands:\n /create \"channel_name\" \"channel_description\""]
    pub fn server_event_channel_created(
        team_uuid: *const ::std::os::raw::c_char,
        channel_uuid: *const ::std::os::raw::c_char,
        channel_name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a new thread is created\n @param channel_uuid The id of the channel this thread was created in\n @param thread_uuid The id of the created thread\n @param user_uuid The id of the user who created the thread\n @param thread_title The title of the created thread\n @param thread_body The body of the created thread\n\n Commands:\n /create \"thread_title\" \"thread_body\""]
    pub fn server_event_thread_created(
        channel_uuid: *const ::std::os::raw::c_char,
        thread_uuid: *const ::std::os::raw::c_char,
        user_uuid: *const ::std::os::raw::c_char,
        thread_title: *const ::std::os::raw::c_char,
        thread_body: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a new reply is created in a thread\n @param thread_uuid The id of the thread this message was created in\n @param user_uuid The id of the user who created the reply\n @param reply_body The body of the created reply\n\n Commands:\n /create \"reply_body\""]
    pub fn server_event_reply_created(
        thread_uuid: *const ::std::os::raw::c_char,
        user_uuid: *const ::std::os::raw::c_char,
        reply_body: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a user subscribe to a team\n @param team_uuid The id of the subscribed team\n @param user_uuid The id of the subscribed user\n\n Commands:\n /subscribe \"team_uuid\""]
    pub fn server_event_user_subscribed(
        team_uuid: *const ::std::os::raw::c_char,
        user_uuid: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a user unsubscribe from a team\n @param team_uuid The id of the unsubscribed team\n @param user_uuid The id of the unsubscribed user\n\n Commands:\n /unsubscribe \"team_uuid\""]
    pub fn server_event_user_unsubscribed(
        team_uuid: *const ::std::os::raw::c_char,
        user_uuid: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a user didn't existed in save and was created\n @param user_uuid The id of the user that was created\n @param user_name The name of the user that was created\n\n Commands:\n /login \"user_name\""]
    pub fn server_event_user_created(
        user_uuid: *const ::std::os::raw::c_char,
        user_name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a user was loaded from the save file\n Should be called at the start of the server once per user loaded\n It should display all users that were saved\n @param user_uuid The id of the saved user\n @param user_name The name of the saved user\n\n Commands:\n None, should be used at server start"]
    pub fn server_event_user_loaded(
        user_uuid: *const ::std::os::raw::c_char,
        user_name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a user logged in\n @param user_uuid The id of the user that logged in\n\n Commands:\n /login"]
    pub fn server_event_user_logged_in(
        user_uuid: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a user logged out\n @param user_uuid The id of the user that logged out\n\n Commands:\n /logout\n When a user lost connexion to the server"]
    pub fn server_event_user_logged_out(
        user_uuid: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a private message was sent between users\n @param sender_uuid The id of the user that sent the message\n @param receiver_uuid The if of the user that receive the message\n @param message_body The message body\n\n Commands:\n /send \"user_uuid\" \"message_body\""]
    pub fn server_event_private_message_sended(
        sender_uuid: *const ::std::os::raw::c_char,
        receiver_uuid: *const ::std::os::raw::c_char,
        message_body: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
